unpackaged/main/default/objects/Corte_de_Caja__c/Corte_de_Caja__c.object-meta.xml
<CustomObject>
    <label>Corte de Caja</label>
    <nameField>
        <displayFormat>Corte de Caja - {000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cortes de Caja</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>