unpackaged/main/default/objects/Corte_de_Caja__c/fields/Cajero__c.field-meta.xml
<CustomField>
    <fullName>Cajero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cajero</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cortes_de_Caja</relationshipName>
    <type>Lookup</type>
</CustomField>