unpackaged/main/default/objects/Corte_de_Caja__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeName__c</field>
            <operation>contains</operation>
            <value>COMPAÑÍA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cortes de Caja</relationshipLabel>
    <relationshipName>Cortes_de_Caja</relationshipName>
    <type>Lookup</type>
</CustomField>