unpackaged/main/default/objects/Corte_de_Caja__c/fields/Fin_del_Corte__c.field-meta.xml
<CustomField>
    <fullName>Fin_del_Corte__c</fullName>
    <label>Fin del Corte</label>
    <type>Date</type>
</CustomField>