unpackaged/main/default/objects/Corte_de_Caja__c/fields/Inicio_del_Corte__c.field-meta.xml
<CustomField>
    <fullName>Inicio_del_Corte__c</fullName>
    <label>Inicio del Corte</label>
    <type>Date</type>
</CustomField>