unpackaged/main/default/objects/Corte_de_Caja__c/fields/Numero_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Pagos__c</fullName>
    <label>Número de Pagos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>