unpackaged/main/default/objects/Corte_de_Caja__c/fields/Numero_Pagos_a_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_Pagos_a_Cuenta__c</fullName>
    <label>Número de Pagos a Cuenta</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>