unpackaged/main/default/objects/Corte_de_Caja__c/fields/Total_de_Pagos_Realizados__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Pagos_Realizados__c</fullName>
    <formula>Numero_de_Pagos__c + Numero_Pagos_a_Cuenta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pagos Realizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>