unpackaged/main/default/objects/Corte_de_Caja__c/fields/Total_de_Transacciones_del_Periodo__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Transacciones_del_Periodo__c</fullName>
    <formula>Total_de_Pagos_Realizados__c +  Numero_Devoluciones_Pagos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Transacciones del Periodo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>