unpackaged/main/default/objects/Corte_de_Caja__c/fields/Total_Monto_Final_Devoluciones__c.field-meta.xml
<CustomField>
    <fullName>Total_Monto_Final_Devoluciones__c</fullName>
    <formula>Total_Monto_Pagos_Cancelados__c + Total_Monto_Pagos_a_Cuenta_Cancelados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monto Final Devoluciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>