unpackaged/main/default/objects/Corte_de_Caja__c/fields/Total_Monto_Pagos_a_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Total_Monto_Pagos_a_Cuenta__c</fullName>
    <label>Total Monto Pagos a Cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>