unpackaged/main/default/objects/Corte_de_Caja__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inicio_del_Corte__c</columns>
    <columns>Fin_del_Corte__c</columns>
    <columns>Cajero__c</columns>
    <columns>Total_Monto_Final_Formula__c</columns>
    <columns>Total_Monto_Final__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>